# neuroprom-back

src/: Dockerfile  docker-compose.yml  init.sql  main.py  pyproject.toml
src/api/: __init__.py  auth.py  chat.py  form.py
src/auth/: jwt.py
src/core/: db_helper.py  neural_network.py  services.py  settings.py
src/core/models/: chat.py
src/core/schemas/: chat.py  form.py  message.py  user.py
src/crud/: chat.py  form.py  user.py
