[project]
name = "neuroprom-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "datetime>=5.5",
    "fastapi>=0.115.12",
    "orjson>=3.10.16",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "uvicorn>=0.34.2",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.1",
    "httpx>=0.27.0"
]
